# opsclaw

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  audit_project.jsonl  bootstrap_remote_subagent.sh  dev.sh  docker-compose.yml  manifest.json  onboard.sh  ops  opsclaw_remote_subagent.sh  project_state.json  pyproject.toml  requirements.txt
api/: a2a.py  audit_store.py  input_resolver.py  llm_registry.py  main.py  master_clients.py  mastergate.py  net_probe.py  rag_store.py  requirements.txt  state_store.py  targets_store.py
docker/: manager.Dockerfile  postgres-compose.yaml  subagent.Dockerfile
docs/: 00-1.system_prompt.md  00-2.master_plan.md  00_opsclaw-plan-v1.0.md  01_opsclaw_overview.md  02_milestones.md  04_M2_design_plan.md  05_M2_implementation.md  06_M3_design_plan.md  07_M3-4_design_plan.md  08_M3-4.1_implementation.md  09_M3-4.2_design_plan.md  10_M3-4.2_implementation.md  11_M3-4.3_implementation.md  12_M3-4.4-design_plan.md  13_M3-4.4-1-broken_implementation.md  14_M3_to_M4_toward_vision.md  15_M3-5.1_implementation.md  16_M3-5.2_design_plan.md  17_M3-5.2_implementation_M3-5.3_design_plan.md  18_M3_5.3_plan.md  Skills.md  TOOL_SKILL_EXPERIENCE Layer.md  USER_CASE.md  agent-system-prompt.md  implementation-next-steps.md  opsclaw-plan-v1.0.md  roadmap-split.md  roadmap.md  system_introduce.md
migrations/: 0001_init_core.sql  0002_registry.sql  0003_history_and_experience.sql  0004_scheduler_and_watch.sql  0005_rbac.sql  0006_notifications.sql  0007_completion_reports.sql  0008_master_mode.sql  0009_proof_of_work.sql  (+6 more)
(+1349 files in other folders)
