[tool.poetry]
name = "oldclaw"
version = "0.1.0"
definition = """
A control‑plane for pi runtime.
"""
authors = ["OldClaw Team <team@oldclaw.io>"]

[tool.poetry.dependencies]
python = ">=3.11"
uvicorn = "*"
fastapi = "*"
psycopg2-binary = "*"
SQLAlchemy = "*"
langgraph = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
