[tool.poetry]
name = "opsclaw"
version = "0.1.0"
definition = """
A control‑plane for pi runtime.
"""
authors = ["OpsClaw Team <team@opsclaw.io>"]

[tool.poetry.dependencies]
python = ">=3.11"
uvicorn = "*"
fastapi = "*"
psycopg2-binary = "*"
SQLAlchemy = "*"
langgraph = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
